# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../batterystats.gni")

module_output_path = "battery_statistics/battery_statistics"

##############################fuzztest##########################################
ohos_fuzztest("NapiFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${batterystats_root_path}/test/fuzztest/napi_fuzzer"

  include_dirs = [
    "./",
    "${batterystats_frameworks_path}/napi/include",
    "${batterystats_inner_api}/include",
    "${batterystats_utils_path}/native/include",
  ]

  configs = [ "${batterystats_utils_path}:coverage_flags" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "./napi_fuzzer_test.cpp" ]

  deps = [
    "${batterystats_inner_api}:batterystats_client",
    "${batterystats_utils_path}:batterystats_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]
}
