# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")
import("//build/test.gni")

module_output_path = "${batterystats_part_name}/batterystats_native"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//base/hiviewdfx/hicollie/interfaces/native/innerkits/include/xcollie",
  ]
}

############################service_test#############################
ohos_unittest("battery_stats_service_test") {
  module_out_path = module_output_path

  sources = [ "src/battery_stats_service_test.cpp" ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
    "//base/powermgr/display_manager/interfaces/innerkits:displaymgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "battery_manager_native:batterysrv_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:libaccountkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

############################client_test#############################
ohos_unittest("battery_stats_client_test") {
  module_out_path = module_output_path

  sources = [ "src/battery_stats_client_test.cpp" ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent_manager:libhisyseventmanager",
    "//base/powermgr/display_manager/interfaces/innerkits:displaymgr",
    "//base/powermgr/power_manager/interfaces/innerkits:powermgr_client",
    "//foundation/aafwk/standard/frameworks/kits/appkit:appkit_native",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "battery_manager_native:batterysrv_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hicollie_native:libhicollie",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account_standard:libaccountkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":battery_stats_client_test",
    ":battery_stats_service_test",
  ]
}
