# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")
import("//build/test.gni")

module_output_path = "${batterystats_part_name}/batterystats_native"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "//base/powermgr/display_manager/interfaces/innerkits/native/include",
    "//base/powermgr/power_manager/interfaces/innerkits/native/include",
    "//base/telephony/core_service/interfaces/innerkits/include",
    "//foundation/communication/bluetooth/services/bluetooth/common",
    "//foundation/communication/wifi/wifi/utils/inc",
    "//utils/system/safwk/native/include",
    "${batterystats_service_path}/native/include",
  ]
}

deps_ex = [
  "ability_base:base",
  "ability_base:want",
  "common_event_service:cesfwk_innerkits",
  "c_utils:utils",
  "eventhandler:libeventhandler",
  "hisysevent_native:libhisysevent",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
]

############################service_test#############################
ohos_unittest("stats_service_test") {
  module_out_path = module_output_path

  sources = [ "src/stats_service_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]

  external_deps = deps_ex
}

############################communication_test#############################
ohos_unittest("stats_communication_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_communication_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################camera_test#############################
ohos_unittest("stats_camera_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_camera_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################audio_test#############################
ohos_unittest("stats_audio_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_audio_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################powermgr_test#############################
ohos_unittest("stats_powermgr_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_powermgr_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################location_test#############################
ohos_unittest("stats_location_test") {
  module_out_path = module_output_path
  sources = [ "src/stats_location_test.cpp" ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = deps_ex
}

############################dump_test#############################
ohos_unittest("stats_dump_test") {
  module_out_path = module_output_path

  sources = [ "src/stats_dump_test.cpp" ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = deps_ex
}

############################display_test#############################
ohos_unittest("stats_display_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_display_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_interfaces_path}/innerkits:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = deps_ex
}

group("unittest") {
  testonly = true
  deps = [
    ":stats_audio_test",
    ":stats_camera_test",
    ":stats_communication_test",
    ":stats_display_test",
    ":stats_dump_test",
    ":stats_location_test",
    ":stats_powermgr_test",
    ":stats_service_test",
  ]
}
