# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/battery_statistics/batterystats.gni")
import("//build/test.gni")

module_output_path = "${batterystats_part_name}/batterystats"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "${batterystats_service_native}/include",
    "//base/telephony/call_manager/interfaces/innerkits",
    "//foundation/communication/bluetooth/services/bluetooth/common",
    "//foundation/communication/wifi/wifi/utils/inc",
  ]
}

config("module_mock_private_config") {
  include_dirs = [
    "include/mock",
    "mock/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/",
    "//commonlibrary/c_utils/base/include/",
  ]
}

deps_ex = [
  "ability_base:base",
  "ability_base:want",
  "common_event_service:cesfwk_innerkits",
  "c_utils:utils",
  "eventhandler:libeventhandler",
  "hisysevent_native:libhisysevent",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "power_manager:powermgr_client",
  "display_manager:displaymgr",
]

############################service_test#############################
ohos_unittest("stats_service_test") {
  module_out_path = module_output_path

  sources = [ "src/stats_service_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]

  external_deps = deps_ex
}

############################service_death_test#############################
ohos_unittest("stats_service_death_test") {
  module_out_path = module_output_path

  sources = [ "src/stats_service_death_test.cpp" ]

  configs = [ ":module_private_config" ]

  defines = [ "STATS_SERVICE_DEATH_UT" ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################wifi_test#############################
ohos_unittest("stats_wifi_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_wifi_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################camera_test#############################
ohos_unittest("stats_camera_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_camera_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################audio_test#############################
ohos_unittest("stats_audio_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_audio_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################powermgr_test#############################
ohos_unittest("stats_powermgr_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_powermgr_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################location_test#############################
ohos_unittest("stats_location_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_location_test.cpp",
  ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################dump_test#############################
ohos_unittest("stats_dump_test") {
  module_out_path = module_output_path

  sources = [ "src/stats_dump_test.cpp" ]

  configs = [
    "${batterystats_utils_path}:batterystats_utils_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = deps_ex
}

############################display_test#############################
ohos_unittest("stats_display_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_display_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################phone_test#############################
ohos_unittest("stats_phone_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_phone_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################bluetooth_test#############################
ohos_unittest("stats_bluetooth_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_bluetooth_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################alarm_test#############################
ohos_unittest("stats_alarm_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/native/src/battery_stats_parser.cpp",
    "src/stats_alarm_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################util_test#############################
ohos_unittest("stats_util_test") {
  module_out_path = module_output_path

  sources = [ "src/stats_util_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = deps_ex
}

############################mock_parcel_test#############################
ohos_unittest("stats_mock_parcel_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/zidl/src/battery_stats_proxy.cpp",
    "mock/source/mock_message_parcel.cpp",
    "mock/source/mock_parcel.cpp",
    "src/mock/stats_mock_parcel_test.cpp",
  ]

  configs = [
    ":module_mock_private_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################mock_object_test#############################
ohos_unittest("stats_mock_object_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/zidl/src/battery_stats_proxy.cpp",
    "mock/source/mock_stats_remote_object.cpp",
    "src/mock/stats_mock_object_test.cpp",
  ]

  configs = [
    ":module_mock_private_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}

############################mock_peer_test#############################
ohos_unittest("stats_mock_peer_test") {
  module_out_path = module_output_path

  sources = [
    "${batterystats_service_path}/zidl/src/battery_stats_proxy.cpp",
    "mock/source/mock_peer_holder.cpp",
    "src/mock/stats_mock_peer_test.cpp",
  ]

  configs = [
    ":module_mock_private_config",
    ":module_private_config",
  ]

  deps = [
    "${batterystats_innerkits}:batterystats_client",
    "${batterystats_service_path}:batterystats_service",
    "${batterystats_utils_path}:batterystats_utils",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = deps_ex
}
group("unittest") {
  testonly = true
  deps = [
    ":stats_alarm_test",
    ":stats_audio_test",
    ":stats_bluetooth_test",
    ":stats_camera_test",
    ":stats_display_test",
    ":stats_dump_test",
    ":stats_location_test",
    ":stats_mock_object_test",
    ":stats_mock_parcel_test",
    ":stats_mock_peer_test",
    ":stats_phone_test",
    ":stats_powermgr_test",
    ":stats_service_death_test",
    ":stats_service_test",
    ":stats_util_test",
    ":stats_wifi_test",
  ]
}
